https://sourceforge.net/projects/skychart/files/2-catalogs/SpiceKernel/
The skychart-spice-base file is required and you can add skychart-spice-ext for more satellites. The list of satellites in each file can be found on the download page.
On Linux you also need to install libcalceph before you can use this function: https://github.com/pchev/libcalceph/releases/tag/v3.4.7

New functions:
- Update to latest version of solar and lunar eclipse catalog.
- For date before 1657 the Delta T computation is from Morrison, Stephenson, Hohenkerk, Zawilski 2021. 
- For date older than 1840-1950, depending on the country, when the LMT timezone is in use, the time offset is now for the longitude of the observatory.
- Can use SPICE kernel for NEO or other solar system objects. On Linux this require installation of libcalceph, see above.
- Use binary file instead of database for asteroid element, improve performance
- Show more asteroid information from the Asteroid lightcurve database
- Display object information directly from the Search window
- Add Alpaca telescope discovery
- Add civil twilight in the calendar
- Allow to import a mosaic in the observing list
- In Observer tool, stop the telescope motion when releasing the arrow button
- Use the nebula outlines from OpenNGC, add option to select line or surface
- Allow simulation for a single asteroid and comet
- Add menu "Window/Lock chart position" to not move the chart after a search
- Show hour angle and airmass under mouse cursor
- Add telescope handpad for ASCOM and INDI
- Add option to blure and set transparency of surface catalog
- Add pre-pointing feature for asteroid occultation

Bug fix:
- Update Quicksat to support the new magnitude file
- Fix PHD2 comet tracking interface
- Fix setting telescope time
- Planet in line mode must be really transparent 
- Fix "Show Mark" option for comet and asteroid simulation

Removed:
- Move SAC to obsolete catalog, replaced by OpenNGC
- Remove Iridium flare computation
