@@ -5,7 +5,7 @@ SPK_KERNEL = cdcbase.bsp
   END_TIME = 1 JAN 2050 00:00:00.000 TDB
   SOURCE_SPK_KERNEL = mar097.bsp
     BODIES          = 3, 399, 4, 401, 402
-  SOURCE_SPK_KERNEL = jup310.bsp
+  SOURCE_SPK_KERNEL = jup365.bsp
     BODIES          = 5, 504, 503, 502, 501
   SOURCE_SPK_KERNEL = sat427.bsp
     BODIES          = 6, 699, 609, 608, 607, 606, 605, 604, 603, 602, 601
@@ -13,14 +13,16 @@ SPK_KERNEL = cdcbase.bsp
     BODIES          = 7, 705, 704, 703, 702, 701
   SOURCE_SPK_KERNEL = nep095.bsp
     BODIES          = 8, 802, 801
-  SOURCE_SPK_KERNEL = plu055.bsp
+  SOURCE_SPK_KERNEL = plu058.bsp
     BODIES          = 9, 901
 
 SPK_KERNEL = cdcext.bsp
   BEGIN_TIME = 1 JAN 2000 00:00:00.000 TDB
   END_TIME = 1 JAN 2050 00:00:00.000 TDB
-  SOURCE_SPK_KERNEL = jup310.bsp
+  SOURCE_SPK_KERNEL = jup365.bsp
     BODIES          = 516, 515, 514, 505
+  SOURCE_SPK_KERNEL = jup344.bsp
+    BODIES          = 506, 507, 508, 509, 510, 511, 512, 513
   SOURCE_SPK_KERNEL = sat427.bsp
     BODIES          = 614, 613, 612 
   SOURCE_SPK_KERNEL = sat393.bsp
