@@ -8,6 +8,9 @@ Le fichier skychart-spice-base est requis et vous pouvez ajouter skychart-spice-
 Avec Linux vous devez installer libcalceph avant d'utiliser cette fonction: https://github.com/pchev/libcalceph/releases/tag/v3.4.7
 
 Nouvelles fonctions:
+- Ajout de 8 faibles satellites de Jupiter, cela nécessite d'installer le kernel Spice mis à jour de novembre 2021.
+- Nouvelle icône du programme par Mattia Verga.
+- Ajuste la magnitude et la distance pour l'effet du mouvement propre.
 - Mise à jour de la dernière version du catalogue des éclipses solaires et lunaires.
 - Pour les dates avant 1657 le calcul de Delta T est basé sur Morrison, Stephenson, Hohenkerk, Zawilski 2021. 
 - Pour les dates antérieures à 1840-1950, selon le pays, lorsque le fuseau horaire LMT est utilisé, le décalage horaire correspond désormais à la longitude de l'observatoire.
@@ -40,6 +43,5 @@ Suppression:
 
 Notez que vous ne devez pas exécuter ce logiciel avec les droits d'administrateur.
 Depuis la version 4.2, un avertissement s'affiche dans la barre de titre si vous le faites.
-Maintenant, cette version affiche une invite chaque fois que le programme est démarré dans ce mode.
-Dans une version future, le programme refusera de démarrer dans ce cas.
+Maintenant, cette version refuse de démarrer si le programme est lancé en administrateur.
 Si vous exécutez actuellement vos logiciels d'astronomie en mode administrateur, il est temps de changer car cela est totalement inutile. Le point important est que vous exécutez tous vos logiciels avec le même utilisateur. Mais tout exécuter avec l'utilisateur standard est bien mieux que de tout exécuter en administrateur!
